# PICODE_Learning_Agent_V1

./: .gitignore  README.md  pyproject.toml
docs/: IMPLEMENTATION_TODO_AGENT_IO_FIRST.md  KG_BRICK_DECISION.md  LEARNER_BRICK_DECISION.md  PARSER_BRICK_DECISION.md  TEMP_PI_CENTERED_TUTOR_ARCHITECTURE_SPEC.md  agent-io-first-development.odt
examples/: documents.jsonl  exercises.jsonl  learner_profile.json  physics_markdown.md
src/ai_learning_agent/agent_io/: __init__.py  attempts.py  cli.py  context.py  exercises.py  kg_queries.py  learner_tools.py  memory.py  retrieval.py
src/ai_learning_agent/kg/: builder.py  chunking.py  cli.py  dedupe.py  extractors.py  fusion.py  models.py  store.py
src/ai_learning_agent/learner/: __init__.py  cli.py  graph_adapter.py  models.py  path.py  spaced_repetition.py  store.py  tracing.py  zpd.py
src/ai_learning_agent/parser/: __init__.py  chunking.py  cli.py  formulas.py  markdown.py  models.py  parser.py  pdf_backends.py  store.py
tests/: run_tests.py  test_agent_io_brick.py  test_kg_brick.py  test_learner_brick.py  test_parser_brick.py
