[project]
name = "ai-learning-agent"
version = "0.1.0"
description = "Brick-by-brick adaptive learning agent for Physics 1"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
